# Sirimbo

./: .buildpath  .cz.toml  .dir-locals.el  .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  .gmrc  .htaccess  .ignore  .npmrc  .pgsync.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .project  .projectile  .rgignore  .sass-lint.yml  .sqlfluff  .yarnrc.yml  AGENTS.md  Makefile  Procfile  README.md  TERMINOLOGY_SHIFT_TODO.md  TODO-wdsf.md  b2-cors.json  build.xml  commitlint.config.js  composer.json  config.php.example  container.nix  default.nix  docker-compose.yml  export.xlsx  flake.nix  gist-accounting-psql.sql  (+36 more)
.github/: dependabot.yml
.husky/: commit-msg
.vercel/: repo.json
assets/: logo-wide.xcf  olymp.info.txt  sitemap.yml  test.html  todo.txt
backend/: .gitignore  build.cjs  build.mjs  eslint.config.js  index.js  package.json  package.nix  pnpm-deps-hash.txt  tsconfig.json  webpack.config.js
backend-php/: composer-project.nix  composer.json  index.php  phpstan-constants.php  phpstan.neon  psalm.xml
config/: constants.php
csts/: package.json  sql.config.json  tsconfig.json
dbdoc/: README.md  app_private.app_table_overview.md  app_private.crm_activity.md  app_private.meta_fks.md  app_private.pary_navrh.md  app_private.skupiny.md  graphile_worker._private_job_queues.md  graphile_worker._private_known_crontabs.md  graphile_worker.jobs.md  graphile_worker.migrations.md  public.aktuality.md  public.allowed_tenants.md  public.allowed_tenants_view.md  public.auth_details.md  public.cohort.md  public.cohort_membership.md  public.dokumenty.md  public.event.md  public.event_instance.md  public.event_instance_trainer.md  public.event_target_cohort.md  public.form_responses.md  public.http_cache.md  public.hypopg_hidden_indexes.md  public.location.md  public.payment.md  public.payment_debtor.md  public.payment_recipient.md  public.person.md  public.person_invitation.md  public.pg_stat_statements.md  public.pg_stat_statements_info.md  public.platby_category_group.md  public.platby_group_skupina.md  public.platby_item.md  public.platby_raw.md  public.response_cache.md  public.room_attachment.md  public.scoreboard.md  public.tenant.md  (+4 more)
deploy/: Dockerfile  module.nix
devel/: OLYMP.redesign.odt  cracked  includeOnce.js  olymp.sql  page.php  pagination.php  passwd.php  permissions.php  style.css  topAktuality.js  uziv_pass.txt
docker/: Dockerfile.pg  README.md  api.Dockerfile  conf.sh  docker-compose.yml  frontend.Dockerfile  worker.Dockerfile
docs/: adr-01-tenant-unification.md  adr-02-notification-dedupe.md  adr-02-push-notifications.md  event-instance-refactor.md  mobile-client.md
e2e/: global-setup.ts  package.json  playwright.config.ts  tsconfig.json
eclipse/: .buildpath  .project
files/: Template.inc  Urldecode.php  atletika.inc  autoload.php  grandslam.inc  lostice2011.inc  olymp.sql  rada.inc
frontend/: .browserslistrc  .editorconfig  .env.olymp  .env.starlet  .eslintrc.js  .eslintrc.json  .gitignore  .prettierignore  biome.json  build.js  calendar.css  codegen.yml  eslint.config.js  figures.schema.json  global.d.ts  graphql.config.yml  graphql.sed  index.css  index.tsx  instrumentation-client.ts  instrumentation.js  instrumentation.ts  jest.config.js  leaflet.css  middleware.ts  next.config.js  next.config.ts  nextjs-routes.d.ts  package.json  package.nix  postcss.config.js  proxy.ts  schema.json  sentry.client.config.js  sentry.edge.config.js  sentry.properties  sentry.server.config.js  serwist.config.js  sql.config.json  sw.ts  (+4 more)
frontend-old/: package.json  package.nix
graphql/: .eslintrc.js  ActivityTimeline.graphql  Announcement.graphql  Articles.graphql  Attachment.graphql  CalendarFeedSubscription.graphql  CohortGroup.graphql  Cohorts.graphql  CurrentUser.graphql  Documents.graphql  Event.graphql  EventConflicts.graphql  EventOverlaps.graphql  Federation.graphql  Invitation.graphql  package.json  (+8 more)
olymp-api/: .dir-locals.el  Makefile  config.yaml  default.nix  olymp-api.cabal  shell.nix  stack.yaml
olymp-api/app/: Main.hs
olymp-api/olymp-schema/: olymp-schema.cabal
olymp-api/src/: Olymp.hs
olymp-api/src/Olymp/: Auth.hs  Cli.hs  Log.hs  Monad.hs  Schema.hs  Tournament.hs
olymp-api/src/Olymp/Effect/: Database.hs  Log.hs  User.hs
servant-ts/: servant-ts.cabal
servant-ts/src/: Typescript.hs
servant-ts/src/Servant/: TS.hs
sirimbo-api/: Makefile  config.yaml  default.nix  olymp-api.cabal  shell.nix  sirimbo-api.cabal  stack.yaml
sirimbo-api/app/: Main.hs  MainTs.hs
sirimbo-api/olymp-tournament/: olymp-tournament.cabal
sirimbo-api/olymp-tournament/Olymp/: Tournament.hs
sirimbo-api/src/: Olymp.hs
sirimbo-api/src/Olymp/: API.hs  Auth.hs  Cli.hs  Effect.hs  Monad.hs  Prelude.hs  Server.hs  WordPress.hs
sirimbo-api/src/Olymp/API/: Announcement.hs  Auth.hs  Event.hs  Payment.hs  Photo.hs  Reservation.hs  Schedule.hs  User.hs  WordPress.hs
sirimbo-api/src/Olymp/Cli/: Config.hs
sirimbo-api/src/Olymp/Effect/: Database.hs  Error.hs  Google.hs  Log.hs  Session.hs  User.hs
sirimbo-api/src/Olymp/Schema/: Permission.hs  Permission.model  Utils.hs  Video.hs
sirimbo-api/src/Olymp/Tournament/: API.hs  Base.hs
sirimbo-api/src/Olymp/YouTube/: Worker.hs
sirimbo-api/src/Servant/: TypeScript.hs
sirimbo-schema/: sirimbo-schema.cabal
sirimbo-schema/Olymp/: Schema.hs
sirimbo-schema/Olymp/Schema/: Announcement.hs  Announcement.model  Article.hs  Article.model  Couple.hs  Couple.model  Document.hs  Document.model  Event.hs  Event.model  Migrate.hs  Orphans.hs  Payment.hs  Payment.model  PaymentGroup.hs  PaymentGroup.model  Permission.hs  Permission.model  Photo.hs  Photo.model  Reservation.hs  Reservation.model  Runtime.hs  Runtime.model  Schedule.hs  Schedule.model  User.hs  User.model  Utils.hs  Video.hs  Video.model
sirimbo-yt-worker/: sirimbo-yt-worker.cabal  yt-worker.cabal  yt-worker.timer
sirimbo-yt-worker/src/: Main.hs  Schema.hs
yt-worker/: default.nix  shell.nix  stack.yaml  yt-worker.cabal  yt-worker.service
yt-worker/config/: models
yt-worker/src/: Main.hs  Schema.hs
(+4602 files in other folders)
