cabal-version:  2.2
name:           olymp-api
version:        0.1.0.0
author:         Jakub Zárybnický
maintainer:     jakub@zarybnicky.com
copyright:      2019 Jakub Zárybnický
license:        BSD-3-Clause
build-type:     Simple

common shared
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmonomorphism-restriction
                      -fwarn-tabs

library
  import: shared
  hs-source-dirs:      src
  ghc-options:        -fplugin=Polysemy.Plugin
  exposed-modules:     Olymp
                       Olymp.Cli
                       Olymp.Log

  build-depends:       base >=4.7 && <5
                     , aeson
                     , co-log
                     , co-log-core
                     , containers
                     , errors
                     , ginger
                     , mtl
                     , optparse-applicative
                     , optparse-generic
                     , persistent
                     , persistent-mysql
                     , polysemy
                     , polysemy-plugin
                     , servant
                     , servant-server
                     , text
                     , wai
                     , warp

executable server
  import: shared
  main-is:             Main.hs
  hs-source-dirs:      app
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N

  build-depends:       base >=4.7 && <5
                     , olymp-api
