cabal-version: 2.4

name:           servant-ts
version:        0.1.0.0
category:       Web
homepage:       https://github.com/smaccoun/servant-ts#readme
author:         Steven MacCoun
maintainer:     theraccoun@gmail.com
copyright:      2018 Steven MacCoun
license:        BSD-3-Clause
build-type:     Simple

library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:   base >=4.7 && <5
                 , cookie
                 , lens
                 , prettyprinter
                 , servant
                 , servant-flatten
                 , servant-foreign
                 , servant-websockets
                 , tagged
                 , text

  exposed-modules: Servant.TS
                   Typescript
