cabal-version:  2.2
name:           sirimbo-api
version:        0.1.0.0
author:         Jakub Zárybnický
maintainer:     jakub@zarybnicky.com
copyright:      2019 Jakub Zárybnický
license:        BSD-3-Clause
build-type:     Simple

common shared
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmonomorphism-restriction
                      -fwarn-tabs
                      -fwrite-ide-info
                      -hiedir=.hie
library
  import: shared
  hs-source-dirs:      src
  exposed-modules:     Olymp
                       Olymp.API
                       Olymp.API.Auth
                       Olymp.API.Event
                       Olymp.API.Payment
                       Olymp.API.Reservation
                       Olymp.API.User
                       Olymp.API.WordPress
                       Olymp.Auth
                       Olymp.Cli
                       Olymp.Effect
                       Olymp.Effect.Database
                       Olymp.Effect.Error
                       Olymp.Effect.Google
                       Olymp.Effect.Log
                       Olymp.Effect.Session
                       Olymp.Effect.User
                       Olymp.Server
                       Olymp.Tournament.API
                       Olymp.Tournament.Base
                       Olymp.YouTube.Worker

  build-depends:       base >=4.7 && <5
                     , aeson
                     , aeson-qq
                     , barbies
                     , binary
                     , bytestring
                     , cassava
                     , co-log
                     , co-log-core
                     , containers
                     , cookie
                     , data-fix
                     , directory
                     , errors
                     , esqueleto
                     , exceptions
                     , filepath
                     , generic-lens
                     , ginger
                     , gogol
                     , gogol-core
                     , gogol-youtube
                     , higgledy
                     , http-client
                     , http-reverse-proxy
                     , in-other-words
                     , JuicyPixels
                     , lens
                     , monad-logger
                     , mtl
                     , sirimbo-schema
                     , openapi3
                     , optparse-applicative
                     , persistent
                     , persistent-mysql
                     , persistent-template
                     , process
                     , qrcode-core
                     , qrcode-juicypixels
                     , recursion-schemes
                     , resource-pool
                     , resourcet
                     , servant
                     , servant-cassava
                     , servant-flatten
                     , servant-foreign
                     , servant-JuicyPixels
                     , servant-multipart
                     , servant-openapi3
                     , servant-swagger-ui
                     , servant-server
                     , servant-websockets
                     , tagged
                     , text
                     , time
                     , transformers
                     , transformers-compat
                     , unordered-containers
                     , validation
                     , vector
                     , wai
                     , wai-cors
                     , warp
                     , websockets
                     , yaml

executable olymp
  import: shared
  main-is:             Main.hs
  hs-source-dirs:      app
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -O2

  build-depends:       base >=4.7 && <5
                     , sirimbo-api
