cabal-version:  2.2
name:           sirimbo-api
version:        0.1.0.0
author:         Jakub Zárybnický
maintainer:     jakub@zarybnicky.com
copyright:      2019 Jakub Zárybnický
license:        BSD-3-Clause
build-type:     Simple

common shared
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmonomorphism-restriction
                      -fwarn-tabs
                      -fwrite-ide-info
                      -hiedir=.hie
library
  import: shared
  hs-source-dirs:      src
  exposed-modules:     Olymp.Schema
                       Olymp.Schema.Permission
                       Olymp.Schema.Runtime
                       Olymp.Schema.User
                       Olymp.Schema.Video

                       Olymp.Schema.Orphans
                       Olymp.Schema.Utils

                       Olymp.Auth
                       Olymp.Cli
                       Olymp.Cli.Config
                       Olymp.Effect
                       Olymp.Effect.Database
                       Olymp.Effect.Error
                       Olymp.Effect.Google
                       Olymp.Effect.Log
                       Olymp.Effect.Session
                       Olymp.Effect.User
                       Olymp.Server
                       Olymp.Tournament.API
                       Olymp.Tournament.Base
                       Olymp.YouTube.Worker
                       Olymp.Prelude

  build-depends:       base >=4.7 && <5
                     , aeson
                     , barbies
                     , bytestring
                     , co-log
                     , co-log-core
                     , containers
                     , cookie
                     , data-fix
                     , directory
                     , generic-lens
                     , gogol
                     , gogol-youtube
                     , higgledy
                     , http-client
                     , http-reverse-proxy
                     , in-other-words
                     , lens
                     , monad-logger
                     , mtl
                     , optparse-applicative
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , process
                     , recursion-schemes
                     , resource-pool
                     , resourcet
                     , servant-server
                     , servant-websockets
                     , text
                     , template-haskell
                     , time
                     , transformers
                     , transformers-compat
                     , validation
                     , wai
                     , warp
                     , websockets
                     , yaml

executable olymp
  import: shared
  main-is:             Main.hs
  hs-source-dirs:      app
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -O2

  build-depends:       base >=4.7 && <5
                     , sirimbo-api
