cabal-version:  2.2
name:           sirimbo-schema
version:        0.1.0.0
author:         Jakub Zárybnický
maintainer:     jakub@zarybnicky.com
copyright:      2019 Jakub Zárybnický
license:        BSD-3-Clause
build-type:     Simple

common shared
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmonomorphism-restriction
                      -fwarn-tabs

library
  import: shared
  hs-source-dirs:      .
  exposed-modules:     Olymp.Schema
                       Olymp.Schema.Permission
                       Olymp.Schema.Runtime
                       Olymp.Schema.User
                       Olymp.Schema.Video

                       Olymp.Schema.Orphans
                       Olymp.Schema.Utils

  build-depends:       base >=4.7 && <5
                     , aeson
                     , bytestring
                     , directory
                     , lens
                     , persistent
                     , persistent-template
                     , template-haskell
                     , text
                     , time
