cabal-version:       2.0
name:                sirimbo-yt-worker
version:             0.1.0.0
license:             BSD3
author:              Jakub Zárybnický
maintainer:          jakub@zarybnicky.com
build-type:          Simple

executable yt-worker
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmonomorphism-restriction
                      -fwarn-tabs

  build-depends:       base >=4.10 && <4.14
                     , aeson
                     , bytestring
                     , conduit
                     , containers
                     , directory
                     , exceptions
                     , filepath
                     , gogol
                     , gogol-core
                     , gogol-youtube
                     , lens
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-mysql
                     , persistent-template
                     , process
                     , resourcet
                     , sirimbo-schema
                     , split
                     , text
                     , time
                     , transformers
                     , unliftio-core
                     , unordered-containers
                     , yaml
