cabal-version:  2.2
name:           olymp-tournament
version:        0.1.0.0
author:         Jakub Zárybnický
maintainer:     jakub@zarybnicky.com
copyright:      2019 Jakub Zárybnický
license:        BSD-3-Clause
build-type:     Simple

common shared
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmonomorphism-restriction
                      -fwarn-tabs

library
  import: shared
  hs-source-dirs:      .
  exposed-modules:     Olymp.Tournament

  build-depends:       base >=4.7 && <5
                     , aeson
                     , bytestring
                     , containers
                     , lens
                     , recursion-schemes
                     , olymp-schema
                     , text
                     , time
                     , transformers
                     , transformers-compat
